Completd: Hero section

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </head>
   <body>
     <!-- Header Section Start -->
-    <header class="container">
+    <header>
       <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg bg-#ffffff py-4">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand text-dark fw-bold h2" href="#"> Star Edu </a>
           <button
             class="navbar-toggler"
@@ -72,13 +72,14 @@
 
       <!-- Slider Start -->
       <div
-        id="carouselExampleCaptions"
-        class="carousel slide my-2"
+        id="heroCarousel"
+        class="carousel slide mb-5 container"
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
           <!-- Item  -->
           <div class="carousel-item active" data-bs-interval="10000">
+            <div class="overlay"></div>
             <img
               src="./assets/images/cover/cover-1.png"
               class="d-block w-100"
@@ -87,12 +88,12 @@
             <div class="carousel-caption">
               <div class="w-75 mx-auto">
                 <h1>Get Started Digital</h1>
-                <h1>Learning</h1>
-                <p>
+                <h1 class="mb-4">Learning</h1>
+                <p class="mb-4">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
-                <button class="btn btn-primary px-3 py-2">Get Started</button>
+                <a href="#" class="btn btn-primary px-3 py-2">Get Started</a>
               </div>
             </div>
           </div>
@@ -106,12 +107,12 @@
             <div class="carousel-caption">
               <div class="w-75 mx-auto">
                 <h1>Get Started Digital</h1>
-                <h1>Learning</h1>
-                <p>
+                <h1 class="mb-4">Learning</h1>
+                <p class="mb-4">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
-                <button class="btn btn-primary px-3 py-2">Get Started</button>
+                <a href="#" class="btn btn-primary px-3 py-2">Get Started</a>
               </div>
             </div>
           </div>
@@ -125,12 +126,12 @@
             <div class="carousel-caption">
               <div class="w-75 mx-auto">
                 <h1>Get Started Digital</h1>
-                <h1>Learning</h1>
-                <p>
+                <h1 class="mb-4">Learning</h1>
+                <p class="mb-4">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
-                <button class="btn btn-primary px-3 py-2">Get Started</button>
+                <a href="#" class="btn btn-primary px-3 py-2">Get Started</a>
               </div>
             </div>
           </div>
@@ -138,7 +139,7 @@
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#heroCarousel"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -147,7 +148,7 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#heroCarousel"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -157,6 +158,14 @@
       <!--/. Slider End -->
     </header>
     <!--/. Header Section End -->
+
+    <!-- Main Start -->
+    <main>
+      <section>
+        
+      </section>
+    </main>
+    <!--/. Main End -->
 
     <!-- Bootstrap JS CDN -->
     <script
