--- a/index.html
+++ b/index.html
@@ -161,9 +161,151 @@
 
     <!-- Main Start -->
     <main>
-      <section>
-        
+      <!-- Courses Section Start -->
+      <section class="py-5">
+        <div class="container">
+          <div class="section-top w-50 mx-auto text-center">
+            <h2 class="fw-semibold">Discover Our Popular</h2>
+            <h2 class="fw-semibold">Courses</h2>
+            <p>
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+
+          <div class="courses mt-5">
+            <div class="container">
+              <div class="row g-3">
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-1.png"
+                        class="img-fluid"
+                        alt="course 1"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-2.png"
+                        class="img-fluid"
+                        alt="course 2"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-3.png"
+                        class="img-fluid"
+                        alt="course 3"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-4.png"
+                        class="img-fluid"
+                        alt="course 4"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-5.png"
+                        class="img-fluid"
+                        alt="course 5"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+                <!-- Single Course -->
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <div class="d-lg-flex border rounded">
+                    <div class="course-img w-75">
+                      <img
+                        src="./assets/images/course/course-6.png"
+                        class="img-fluid"
+                        alt="course 6"
+                      />
+                    </div>
+                    <div class="course-content p-3">
+                      <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
+                      <p>
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card.
+                      </p>
+                      <h6 class="fw-semibold text-primary">Price : 20$</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mt-5 text-center">
+                <button class="btn btn-primary px-3 py-2">See More Course</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+      <!--/. Courses Section End -->
     </main>
     <!--/. Main End -->
 
