--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <div class="container">
           <a class="navbar-brand text-dark fw-bold h2" href="#"> Star Edu </a>
           <button
+            class="btn btn-outline-primary fw-semibold ms-auto me-2 d-none d-md-block d-lg-none"
+            type="button"
+          >
+            Register
+          </button>
+          <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -93,8 +99,8 @@
             <div class="carousel-caption">
               <div class="w-75 mx-auto">
                 <h1>Get Started Digital</h1>
-                <h1 class="mb-4">Learning</h1>
-                <p class="mb-4">
+                <h1 class="mb-md-4 mb-sm-3">Learning</h1>
+                <p class="mb-md-4 mb-sm-3">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
@@ -169,9 +175,10 @@
       <!-- Courses Section Start -->
       <section class="py-5">
         <div class="container">
-          <div class="section-top w-50 mx-auto text-center">
-            <h2 class="fw-semibold">Discover Our Popular</h2>
-            <h2 class="fw-semibold">Courses</h2>
+          <div class="section-top w-60 mx-auto text-center">
+            <h2 class="fw-semibold d-none d-lg-block">Discover Our Popular</h2>
+            <h2 class="fw-semibold d-none d-lg-block">Courses</h2>
+            <h2 class="fw-semibold d-lg-none">Discover Our Popular Courses</h2>
             <p>
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout.
@@ -182,16 +189,16 @@
             <div class="container">
               <div class="row g-3">
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-1.png"
                         class="img-fluid"
                         alt="course 1"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -202,16 +209,16 @@
                   </div>
                 </div>
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-2.png"
                         class="img-fluid"
                         alt="course 2"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -222,16 +229,16 @@
                   </div>
                 </div>
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-3.png"
                         class="img-fluid"
                         alt="course 3"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -242,16 +249,16 @@
                   </div>
                 </div>
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-4.png"
                         class="img-fluid"
                         alt="course 4"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -262,16 +269,16 @@
                   </div>
                 </div>
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-5.png"
                         class="img-fluid"
                         alt="course 5"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -282,16 +289,16 @@
                   </div>
                 </div>
                 <!-- Single Course -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                  <div class="d-lg-flex border rounded">
-                    <div class="course-img w-75">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                  <div class="d-md-flex align-items-center border rounded">
+                    <div class="course-img w-50">
                       <img
                         src="./assets/images/course/course-6.png"
                         class="img-fluid"
                         alt="course 6"
                       />
                     </div>
-                    <div class="course-content p-3">
+                    <div class="course-content px-3 pt-3">
                       <h5 class="fw-semibold">Fundamental Of UI/UX Design</h5>
                       <p>
                         Some quick example text to build on the card title and
@@ -320,8 +327,8 @@
           <div
             class="row bg-primary p-5 d-flex align-items-center justify-content-center border rounded"
           >
-            <div class="col-md-8 col-sm-12">
-              <div class="join-left">
+            <div class="col-lg-8 col-md-12">
+              <div class="join-left text-md-center">
                 <h3 class="text-white fw-semibold">Ready to join?</h3>
                 <p class="text-white">
                   It is a long established fact that a reader will be distracted
@@ -329,7 +336,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-12 mt-sm-4">
+            <div class="col-lg-4 col-md-12 mt-md-4">
               <div class="register-modal text-center">
                 <!-- Button trigger modal -->
                 <button
@@ -349,7 +356,7 @@
 
       <!-- FAQ Section Start -->
       <section class="my-5">
-        <div class="section-top w-50 mx-auto text-center pb-5">
+        <div class="section-top w-60 mx-auto text-center pb-5">
           <h2 class="fw-semibold">Frequently Asked Questions</h2>
           <p>
             It is a long established fact that a reader will be distracted by
@@ -359,7 +366,7 @@
 
         <div class="container">
           <div class="row justify-content-md-center">
-            <div class="col-md-8">
+            <div class="col-lg-8 col-md-12">
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
