fix ready to join button

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12 mt-md-4">
+            <div class="col-lg-4 col-md-12">
               <div class="register-modal text-center">
                 <!-- Button trigger modal -->
                 <button
